[package]
name = "auction_house_tracker"
version = "0.1.0"
authors = ["rustmain <mail@rustmain.dev>"]
edition = "2018"

[dependencies]
reqwest = "0.9"
serde_json = "1"
serde = "1"
serde_derive = "1"
chrono = "0.4"
diesel = { version = "1.4", features = ["postgres", "chrono"] }
dotenv = "0.15"
num_cpus = "1.11"
